# week-3-exercises

./: .gitignore  CMakeBoilerPlate.txt  README.md
Automata_Example/: CMakeLists.txt  dfa
Automata_Example/include/: automaton.h
Automata_Example/source/: CMakeLists.txt  automaton.cpp  main.cpp
Automata_Example/test/: CMakeLists.txt  automaton_comprehensive_tests.cpp
Data_Pipeline/: CMakeLists.txt
Data_Pipeline/include/: pipeline_adapter.hpp  simple.hpp
Data_Pipeline/source/: pipeline_adapter.cpp  pipeline_demo.cpp  simple.cpp
Student_Grade_Example/: CMakeLists.txt
Student_Grade_Example/include/: Student.hpp
Student_Grade_Example/source/: Student.cpp
Student_Grade_Example/test/: test_grades.cpp
catch2_example/: CMakeLists.txt  README.md  test_automaton.cpp
